# Diffusion_baseline

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/methods/diffusion_baseline/: contact_wire_guided_inpaint_v1.yaml  contact_wire_lora_inpaint_v1.yaml  contact_wire_lora_residual_v2.yaml  contact_wire_v1.yaml
configs/methods/diffusion_v2/: contact_wire_v2.yaml
docs/: dataset_real_说明.md  results_preview.md  工程分析.md  服务器运行说明.md  铁路接触线裂缝生成技术路线_保姆级.md
src/crack_synth/: __init__.py
src/crack_synth/methods/: __init__.py
src/crack_synth/methods/diffusion_baseline/: __init__.py  build_manifests.py  config.py  evaluate_generation.py  generate_baseline.py  generate_manual_case.py  guide.py  paired_dataset.py  paths.py  postprocess.py  prepare_rois.py  roi.py
src/crack_synth/methods/diffusion_lora/: __init__.py  prepare_lora_data.py  train_inpaint_lora.py
src/crack_synth/methods/diffusion_v2/: __init__.py  config.py  evaluate_generation.py  generate.py  guide.py  io_utils.py  paths.py  postprocess.py  prepare_lora_data.py  progress.py  roi.py  train_inpaint_lora.py
