[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crack-synth"
version = "0.1.0"
description = "Task-oriented crack synthesis workspace with a single diffusion v2 pipeline."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "accelerate>=0.30",
  "diffusers>=0.29",
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pandas>=2.0",
  "peft>=0.11",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "safetensors>=0.4",
  "torchvision>=0.16",
  "tqdm>=4.66",
  "transformers>=4.41",
]

[project.scripts]
prepare_rois = "crack_synth.methods.diffusion_v2.prepare_rois:main"
generate_cracks = "crack_synth.methods.diffusion_v2.generate:main"
evaluate_generation = "crack_synth.methods.diffusion_v2.evaluate_generation:main"
prepare_lora_data = "crack_synth.methods.diffusion_v2.prepare_lora_data:main"
train_inpaint_lora = "crack_synth.methods.diffusion_v2.train_inpaint_lora:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
